[package]
name = "baobab"
version = "0.1.0"
authors = [ "Aleksandr Dorodnykh <ruskagerot@gmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1"
argparse = "0.2.2"
dirs = "2.0"
env_logger = "0.7"
indicatif = "0.14.0"
log = "0.4"
reqwest = { version = "0.10.3", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.8"
