[package]
name = "baobab"
version = "0.1.0"
authors = [ "Aleksandr Dorodnykh <ruskagerot@gmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1"
console = "0.11"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"
dirs = "2.0"
indicatif = "0.14.0"
log = "0.4"
log4rs = { version = "0.12.0", features = [ "rolling_file_appender" ] }
notify-rust = "4.0.0"
reqwest = { version = "0.10.3", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
terminal_size = "0.1.13"
